tests/urmoac/input/wkt/errors/polygons_broken_id/destinations.wkt
#id;pos;[var]
a;POLYGON((-210 -10, -190 -10, -190 10, -210 10, -210 -10))
